add: Implementaicon nuevo Tweet

--- a/avance.ipynb
+++ b/avance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "4             got sent photo ruby smoke pours school  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "(torch.Size([7613, 23]), 12789)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,24 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: train loss 0.6847, test loss 0.6839\n",
-      "Epoch 10: train loss 0.0974, test loss 0.8950\n",
-      "Epoch 20: train loss 0.0395, test loss 1.6662\n",
-      "Epoch 30: train loss 0.0343, test loss 1.6979\n",
-      "Epoch 40: train loss 0.0338, test loss 2.0152\n",
-      "Epoch 50: train loss 0.0350, test loss 1.9113\n",
-      "Epoch 60: train loss 0.0370, test loss 1.4316\n",
-      "Epoch 70: train loss 0.0334, test loss 1.9667\n",
-      "Epoch 80: train loss 0.0332, test loss 2.1567\n",
-      "Epoch 90: train loss 0.0336, test loss 1.7769\n",
-      "Epoch 99: train loss 0.0334, test loss 2.0483\n"
+      "Epoch 0: train loss 0.6837, test loss 0.6827\n",
+      "Epoch 10: train loss 0.6834, test loss 0.6822\n",
+      "Epoch 20: train loss 0.0611, test loss 1.0010\n",
+      "Epoch 30: train loss 0.0379, test loss 1.5286\n",
+      "Epoch 40: train loss 0.0343, test loss 1.9039\n",
+      "Epoch 50: train loss 0.0456, test loss 1.5087\n",
+      "Epoch 60: train loss 0.0336, test loss 1.8403\n",
+      "Epoch 70: train loss 0.0335, test loss 1.9411\n",
+      "Epoch 80: train loss 0.0335, test loss 1.9126\n",
+      "Epoch 90: train loss 0.0334, test loss 2.0605\n",
+      "Epoch 99: train loss 0.0360, test loss 1.3992\n"
      ]
     }
    ],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,16 +498,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7248850952068286\n",
-      "Precision: 0.6742424242424242\n",
-      "Recall: 0.6856702619414484\n"
+      "Accuracy: 0.7360472751149048\n",
+      "Precision: 0.6963434022257552\n",
+      "Recall: 0.674884437596302\n"
      ]
     },
     {
@@ -516,7 +516,7 @@
        "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,6 +537,53 @@
     "print(f'Precision: {precision}')\n",
     "print(f'Recall: {recall}')\n",
     "print\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify_tweet(new_tweet, model, vocab, max_len):\n",
+    "    # Preprocesar el tweet\n",
+    "    processed_tweet = preprocess_text(new_tweet)\n",
+    "    \n",
+    "    # Tokenizar y aplicar padding\n",
+    "    tokenized = [vocab[word] for word in processed_tweet.split() if word in vocab]\n",
+    "    padded = tokenized + [0] * (max_len - len(tokenized))\n",
+    "    \n",
+    "    # Convertir a tensor y pasar por el modelo\n",
+    "    tweet_tensor = torch.tensor([padded], dtype=torch.long)\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        prediction = model(tweet_tensor).item()\n",
+    "    \n",
+    "    # Interpretar la salida del modelo\n",
+    "    if prediction >= 0.5:\n",
+    "        return \"\\33[91m Este tweet probablemente se trata de un desastre natural real. \\33[0m\"\n",
+    "    else:\n",
+    "        return \"\\33[92m Este tweet probablemente no se trata de un desastre natural real. \\33[0m\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92m Este tweet probablemente no se trata de un desastre natural real. \u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Leer input del usuario\n",
+    "new_tweet = input(\"Escribe un tweet: \")\n",
+    "result = classify_tweet(new_tweet, model, vocab, max_len)\n",
+    "print(result)"
    ]
   }
  ],
