add: Descripcion algortimo

--- a/avance.ipynb
+++ b/avance.ipynb
@@ -585,6 +585,13 @@
     "result = classify_tweet(new_tweet, model, vocab, max_len)\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Descripcion del algormio utilizado: "
+   ]
   }
  ],
  "metadata": {
