--- a/avance.ipynb
+++ b/avance.ipynb
@@ -590,7 +590,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Descripcion del algormio utilizado: "
+    "# Descripcion del algormio utilizado: \n",
+    "## 1. Preprocesamiento de Datos\n",
+    "Convertimos todo el texto a minúsculas para unificar el formato.\n",
+    "Eliminamos URLs, caracteres especiales, emoticones y signos de puntuación para reducir el ruido.\n",
+    "Eliminamos palabras vacías (stopwords) y números para centrarnos en las palabras más significativas.\n",
+    "## 2. Tokenización y Padding\n",
+    "Dividimos el texto en palabras (tokens) y creamos un vocabulario que asigna un número único a cada palabra.\n",
+    "Convertimos las palabras en cada tweet a su número correspondiente según el vocabulario.\n",
+    "Rellenamos las secuencias con ceros para que todas tengan la misma longitud.\n",
+    "## 3. División del Conjunto de Datos\n",
+    "Dividimos el conjunto de datos en conjuntos de entrenamiento y prueba.\n",
+    "## 4. Preparación del DataLoader\n",
+    "Utilizamos el DataLoader de PyTorch para manejar el muestreo de batches durante el entrenamiento.\n",
+    "## 5. Construcción del Modelo\n",
+    "Creamos un modelo de red neuronal utilizando PyTorch, que incluye una capa de embedding, una capa LSTM y una capa totalmente conectada.\n",
+    "## 6. Compilación del Modelo\n",
+    "Utilizamos el optimizador Adam y la función de pérdida de entropía cruzada binaria (BCELoss).\n",
+    "## 7. Entrenamiento del Modelo\n",
+    "Entrenamos el modelo a través de múltiples épocas, utilizando backpropagation y optimización de Adam.\n",
+    "En cada época, calculamos y almacenamos la pérdida en los conjuntos de entrenamiento y prueba.\n",
+    "## 8. Evaluación del Modelo\n",
+    "Utilizamos el modelo entrenado para hacer predicciones en el conjunto de prueba.\n",
+    "Calculamos métricas como precisión, recall y F1-score para evaluar el rendimiento del modelo.\n",
+    "Este algoritmo proporciona un enfoque sólido para clasificar tweets en categorías relacionadas con desastres naturales. El uso de una arquitectura LSTM permite al modelo capturar dependencias temporales en los datos de texto, lo que es crucial para entender el contexto y hacer predicciones más precisas."
    ]
   }
  ],
