add: Model con Negatividad

--- a/avance.ipynb
+++ b/avance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "4             got sent photo ruby smoke pours school  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "(torch.Size([7613, 23]), 12789)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,24 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0: train loss 0.6837, test loss 0.6827\n",
-      "Epoch 10: train loss 0.6834, test loss 0.6822\n",
-      "Epoch 20: train loss 0.0611, test loss 1.0010\n",
-      "Epoch 30: train loss 0.0379, test loss 1.5286\n",
-      "Epoch 40: train loss 0.0343, test loss 1.9039\n",
-      "Epoch 50: train loss 0.0456, test loss 1.5087\n",
-      "Epoch 60: train loss 0.0336, test loss 1.8403\n",
-      "Epoch 70: train loss 0.0335, test loss 1.9411\n",
-      "Epoch 80: train loss 0.0335, test loss 1.9126\n",
-      "Epoch 90: train loss 0.0334, test loss 2.0605\n",
-      "Epoch 99: train loss 0.0360, test loss 1.3992\n"
+      "Epoch 0: train loss 0.6835, test loss 0.6822\n",
+      "Epoch 10: train loss 0.2730, test loss 0.5910\n",
+      "Epoch 20: train loss 0.0694, test loss 1.0184\n",
+      "Epoch 30: train loss 0.0439, test loss 1.3200\n",
+      "Epoch 40: train loss 0.0370, test loss 1.4491\n",
+      "Epoch 50: train loss 0.0373, test loss 1.8746\n",
+      "Epoch 60: train loss 0.0396, test loss 1.3885\n",
+      "Epoch 70: train loss 0.0343, test loss 1.7286\n",
+      "Epoch 80: train loss 0.0370, test loss 1.9563\n",
+      "Epoch 90: train loss 0.0338, test loss 1.7520\n",
+      "Epoch 99: train loss 0.0335, test loss 1.9451\n"
      ]
     }
    ],
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,16 +498,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7360472751149048\n",
-      "Precision: 0.6963434022257552\n",
-      "Recall: 0.674884437596302\n"
+      "Accuracy: 0.7288246881155613\n",
+      "Precision: 0.6849529780564263\n",
+      "Recall: 0.6733436055469953\n"
      ]
     },
     {
@@ -516,7 +516,7 @@
        "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,6 +614,387 @@
     "Utilizamos el modelo entrenado para hacer predicciones en el conjunto de prueba.\n",
     "Calculamos métricas como precisión, recall y F1-score para evaluar el rendimiento del modelo.\n",
     "Este algoritmo proporciona un enfoque sólido para clasificar tweets en categorías relacionadas con desastres naturales. El uso de una arquitectura LSTM permite al modelo capturar dependencias temporales en los datos de texto, lo que es crucial para entender el contexto y hacer predicciones más precisas."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PARTE 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\angel\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('vader_lexicon')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>keyword</th>\n",
+       "      <th>location</th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "      <th>preprocessed_text</th>\n",
+       "      <th>negativity_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>deeds reason may allah forgive us</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
+       "      <td>1</td>\n",
+       "      <td>forest fire near la ronge sask canada</td>\n",
+       "      <td>0.286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>notified officers evacuation shelter place ord...</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>people receive evacuation orders california</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>got sent photo ruby smoke pours school</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id keyword location                                               text  \\\n",
+       "0   1     NaN      NaN  Our Deeds are the Reason of this #earthquake M...   \n",
+       "1   4     NaN      NaN             Forest fire near La Ronge Sask. Canada   \n",
+       "2   5     NaN      NaN  All residents asked to 'shelter in place' are ...   \n",
+       "3   6     NaN      NaN  13,000 people receive #wildfires evacuation or...   \n",
+       "4   7     NaN      NaN  Just got sent this photo from Ruby #Alaska as ...   \n",
+       "\n",
+       "   target                                  preprocessed_text  negativity_score  \n",
+       "0       1                  deeds reason may allah forgive us             0.000  \n",
+       "1       1              forest fire near la ronge sask canada             0.286  \n",
+       "2       1  notified officers evacuation shelter place ord...             0.000  \n",
+       "3       1        people receive evacuation orders california             0.000  \n",
+       "4       1             got sent photo ruby smoke pours school             0.000  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+    "\n",
+    "# Initialize the Sentiment Intensity Analyzer\n",
+    "sia = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "# Calculate the negativity scores for the tweets in the dataset\n",
+    "df['negativity_score'] = df['preprocessed_text'].apply(lambda x: sia.polarity_scores(str(x))['neg'])\n",
+    "\n",
+    "# Show the first few rows of the dataframe with the added negativity score\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class TweetClassifierWithNegativity(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_dim):\n",
+    "        super(TweetClassifierWithNegativity, self).__init__()\n",
+    "        \n",
+    "        # Embedding Layer\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        \n",
+    "        # LSTM Layer\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, batch_first=True)\n",
+    "        \n",
+    "        # Fully Connected Layer\n",
+    "        self.fc = nn.Linear(hidden_dim + 1, 1)  # +1 for the negativity score\n",
+    "        \n",
+    "        # Sigmoid Activation\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "\n",
+    "    def forward(self, x, negativity_score):\n",
+    "        x = self.embedding(x)\n",
+    "        lstm_out, _ = self.lstm(x)\n",
+    "        lstm_out = lstm_out[:, -1, :]\n",
+    "        \n",
+    "        # Concatenate the negativity score with the LSTM output\n",
+    "        lstm_out = torch.cat((lstm_out, negativity_score.unsqueeze(1)), dim=1)\n",
+    "        \n",
+    "        out = self.fc(lstm_out)\n",
+    "        out = self.sigmoid(out)\n",
+    "        return out\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([7613, 23]), 12789)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from collections import Counter\n",
+    "import torch\n",
+    "\n",
+    "# Supongo que ya has preprocesado el texto y calculado la puntuación de negatividad\n",
+    "# y que estas están almacenadas en las columnas 'preprocessed_text' y 'negativity_score'\n",
+    "\n",
+    "# Tokenizar el texto en palabras\n",
+    "tokenized_text = [text.split() for text in df['preprocessed_text']]\n",
+    "\n",
+    "# Contar las ocurrencias de cada palabra para crear un vocabulario\n",
+    "flat_list = [word for sublist in tokenized_text for word in sublist]\n",
+    "word_counter = Counter(flat_list)\n",
+    "vocab = {word: i+1 for i, (word, _) in enumerate(word_counter.most_common())}\n",
+    "\n",
+    "# Convertir el texto tokenizado a formato numérico basado en el vocabulario\n",
+    "numericalized_text = [[vocab[word] for word in text] for text in tokenized_text]\n",
+    "\n",
+    "# Relleno (Padding): Hacer que todas las secuencias tengan la misma longitud\n",
+    "max_len = max(len(seq) for seq in numericalized_text)\n",
+    "padded_sequences = [seq + [0]*(max_len - len(seq)) for seq in numericalized_text]\n",
+    "\n",
+    "# Convertir a tensores de PyTorch\n",
+    "tensor_sequences = torch.tensor(padded_sequences, dtype=torch.long)\n",
+    "tensor_labels = torch.tensor(df['target'].values, dtype=torch.float32)\n",
+    "tensor_negativity_scores = torch.tensor(df['negativity_score'].values, dtype=torch.float32)\n",
+    "\n",
+    "# Dividir el conjunto de datos en conjuntos de entrenamiento y prueba\n",
+    "X_train, X_test, y_train, y_test, neg_train, neg_test = train_test_split(\n",
+    "    tensor_sequences, tensor_labels, tensor_negativity_scores, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Crear objetos DataLoader\n",
+    "train_data = TensorDataset(X_train, y_train, neg_train)\n",
+    "train_loader = DataLoader(train_data, shuffle=True, batch_size=64)\n",
+    "\n",
+    "test_data = TensorDataset(X_test, y_test, neg_test)\n",
+    "test_loader = DataLoader(test_data, shuffle=False, batch_size=64)\n",
+    "\n",
+    "# Tamaño del vocabulario\n",
+    "vocab_size = len(vocab) + 1  # Sumar 1 para el relleno (0)\n",
+    "\n",
+    "# Mostrar las dimensiones\n",
+    "tensor_sequences.shape, vocab_size\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0: train loss 0.6302, test loss 0.6784\n",
+      "Epoch 10: train loss 0.6918, test loss 0.6834\n",
+      "Epoch 20: train loss 0.1900, test loss 1.0397\n",
+      "Epoch 30: train loss 0.0129, test loss 1.4663\n",
+      "Epoch 40: train loss 0.0086, test loss 1.9704\n",
+      "Epoch 50: train loss 0.0000, test loss 2.2964\n",
+      "Epoch 60: train loss 0.0468, test loss 1.9792\n",
+      "Epoch 70: train loss 0.0339, test loss 2.1523\n",
+      "Epoch 80: train loss 0.0003, test loss 2.1280\n",
+      "Epoch 90: train loss 0.0000, test loss 2.0802\n",
+      "Epoch 99: train loss 0.0707, test loss 2.2998\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.optim as optim\n",
+    "import torch.utils.data as data\n",
+    "\n",
+    "# Asumiendo que 'TweetClassifier' es tu modelo LSTM personalizado para este problema\n",
+    "\n",
+    "model = TweetClassifierWithNegativity(vocab_size, embedding_dim, hidden_dim)\n",
+    "\n",
+    "optimizer = optim.Adam(model.parameters())\n",
+    "loss_fn = nn.BCELoss()\n",
+    "\n",
+    "# DataLoader\n",
+    "loader = data.DataLoader(data.TensorDataset(X_train, y_train), shuffle=True, batch_size=64)\n",
+    "\n",
+    "# Número de épocas\n",
+    "n_epochs = 100\n",
+    "\n",
+    "# Listas para almacenar las métricas\n",
+    "loss_train = []\n",
+    "loss_test = []\n",
+    "\n",
+    "# Loop de entrenamiento\n",
+    "for epoch in range(n_epochs):\n",
+    "    model.train()\n",
+    "    for batch in train_loader:\n",
+    "        # Obtener datos, etiquetas y puntuaciones de negatividad del batch\n",
+    "        batch_data, batch_labels, negativity_scores = batch\n",
+    "        \n",
+    "        # Lógica de entrenamiento\n",
+    "        optimizer.zero_grad()\n",
+    "        predictions = model(batch_data, negativity_scores).squeeze()\n",
+    "        loss = loss_fn(predictions, batch_labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    # Validación cada 100 épocas\n",
+    "    if epoch % 10 != 0 and epoch != n_epochs - 1:\n",
+    "        continue\n",
+    "\n",
+    "    test_labels = []\n",
+    "    test_preds = []\n",
+    "\n",
+    "    # No es necesario calcular gradientes\n",
+    "    with torch.no_grad():\n",
+    "        for batch in test_loader:\n",
+    "            # Obtener datos, etiquetas y puntuaciones de negatividad del batch\n",
+    "            batch_data, batch_labels, negativity_scores = batch\n",
+    "            \n",
+    "            # Almacenar las etiquetas verdaderas\n",
+    "            test_labels.extend(batch_labels.tolist())\n",
+    "            \n",
+    "            # Hacer predicciones\n",
+    "            predictions = model(batch_data, negativity_scores).squeeze()\n",
+    "            test_loss = loss_fn(predictions, batch_labels)\n",
+    "            \n",
+    "            # Almacenar las predicciones\n",
+    "            test_preds.extend(predictions.tolist())\n",
+    "\n",
+    "    print(f\"Epoch {epoch}: train loss {loss:.4f}, test loss {test_loss:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7130663164806303\n",
+      "Precision: 0.6615853658536586\n",
+      "Recall: 0.6687211093990755\n",
+      "F1 Score: 0.6651340996168582\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "# Redondear las predicciones para obtener etiquetas binarias (0 o 1)\n",
+    "rounded_preds = [round(pred) for pred in test_preds]\n",
+    "\n",
+    "# Calcular métricas\n",
+    "accuracy = accuracy_score(test_labels, rounded_preds)\n",
+    "precision = precision_score(test_labels, rounded_preds)\n",
+    "recall = recall_score(test_labels, rounded_preds)\n",
+    "f1 = f1_score(test_labels, rounded_preds)\n",
+    "\n",
+    "print(f'Accuracy: {accuracy}')\n",
+    "print(f'Precision: {precision}')\n",
+    "print(f'Recall: {recall}')\n",
+    "print(f'F1 Score: {f1}')"
    ]
   }
  ],
